<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/rescue_background"><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/space_lg"><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/checkout_title" android:textAppearance="@style/TextAppearance.RescueFarm.Display"/><TextView android:id="@+id/checkoutOwnerText" android:layout_width="match_parent" android:layout_height="wrap_content"/><EditText android:id="@+id/checkoutName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/receiver_name_hint"/><EditText android:id="@+id/checkoutPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/receiver_phone_hint" android:inputType="phone"/><EditText android:id="@+id/checkoutAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/receiver_address_hint"/><EditText android:id="@+id/checkoutLatitude" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/latitude_hint" android:inputType="numberDecimal|numberSigned"/><EditText android:id="@+id/checkoutLongitude" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/longitude_hint" android:inputType="numberDecimal|numberSigned"/><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fulfillment_label"/><Spinner android:id="@+id/checkoutFulfillment" android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min"/><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/payment_method_label"/><Spinner android:id="@+id/checkoutPayment" android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min"/><EditText android:id="@+id/checkoutNote" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/order_note_hint"/><TextView android:id="@+id/checkoutSummary" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="@dimen/space_md" android:background="@color/rescue_primary_container"/><TextView android:id="@+id/checkoutMessage" android:layout_width="match_parent" android:layout_height="wrap_content"/><com.google.android.material.button.MaterialButton android:id="@+id/submitCheckoutButton" android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min" android:text="@string/place_order_action"/></LinearLayout></ScrollView>
