<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/rescue_background">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/space_lg">
        <TextView android:id="@+id/promotionProductName" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textAppearance="@style/TextAppearance.RescueFarm.Display" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm" android:text="@string/promotion_single_source_notice"
            android:textColor="@color/rescue_on_surface_variant" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md" android:text="@string/promotion_type_label" />
        <Spinner android:id="@+id/promotionTypeSpinner" android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min" />
        <EditText android:id="@+id/promotionValueInput" android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min" android:inputType="numberDecimal"
            android:hint="@string/promotion_value_hint" />
        <EditText android:id="@+id/promotionTiersInput" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:minLines="3" android:gravity="top"
            android:hint="@string/promotion_tiers_hint" />
        <EditText android:id="@+id/promotionStartInput" android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min" android:hint="@string/start_date_hint" />
        <EditText android:id="@+id/promotionEndInput" android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min" android:hint="@string/end_date_hint" />
        <com.google.android.material.switchmaterial.SwitchMaterial android:id="@+id/promotionActiveSwitch"
            android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min"
            android:text="@string/promotion_active_label" android:checked="true" />
        <com.google.android.material.button.MaterialButton android:id="@+id/savePromotionButton"
            android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min"
            android:text="@string/save_promotion_action" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
