<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/rescue_background">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/space_lg">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/campaign_editor_title" android:textAppearance="@style/TextAppearance.RescueFarm.Display" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_md" android:hint="@string/campaign_title_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignTitleInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/campaign_description_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignDescriptionInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:minLines="2" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md" android:text="@string/rescue_reason_label" />
        <Spinner android:id="@+id/campaignReasonSpinner" android:layout_width="match_parent" android:layout_height="48dp" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm" android:text="@string/rescue_mode_label" />
        <Spinner android:id="@+id/campaignModeSpinner" android:layout_width="match_parent" android:layout_height="48dp" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/campaign_targets_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignTargetsInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/start_date_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignStartInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/end_date_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignEndInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/latitude_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignLatitudeInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/longitude_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignLongitudeInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/location_name_hint">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/campaignLocationNameInput"
                android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:id="@+id/saveCampaignDraftButton" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_lg"
            android:text="@string/save_draft_action" />
        <Button android:id="@+id/submitCampaignButton" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/submit_approval_action" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
