<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="@dimen/space_lg"><Spinner android:id="@+id/reportTargetType" android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min"/><EditText android:id="@+id/reportTargetId" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/report_target_hint"/><EditText android:id="@+id/reportReason" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/report_reason_hint"/><EditText android:id="@+id/reportDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/report_description_hint"/><Button android:id="@+id/submitReportButton" android:layout_width="match_parent" android:layout_height="@dimen/touch_target_min" android:text="@string/submit_report_action"/></LinearLayout>
