<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/rescue_background">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/space_md">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/seller_posts_title" android:textAppearance="@style/TextAppearance.RescueFarm.Display" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/post_moderation_notice" android:textColor="@color/rescue_on_surface_variant" />
        <com.google.android.material.button.MaterialButton android:id="@+id/addPostButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/add_post_action" />
        <com.google.android.material.button.MaterialButton android:id="@+id/refreshSellerPostsButton"
            style="@style/Widget.Material3.Button.OutlinedButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/refresh_action" />
        <LinearLayout android:id="@+id/sellerPostContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
